<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_personal_info"
            android:icon="@drawable/ic_person"
            android:title="@string/personal_information" />
        <item
            android:id="@+id/nav_applied_leaves"
            android:icon="@drawable/ic_list_applied"
            android:title="@string/leaves_applied" />
        <item
            android:id="@+id/nav_leaves_summary"
            android:icon="@drawable/ic_list"
            android:title="@string/leaves_summary" />
        <item
            android:id="@+id/nav_leave_applications"
            android:icon="@drawable/ic_applications"
            android:title="@string/leave_applications" />
    </group>
</menu>
