<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/card_view_elevation"
    app:cardMaxElevation="@dimen/card_view_max_elevation"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_apply_leave">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_row_applicant_name"
                android:textColor="@color/colorAccent"
                android:text="@string/applicant_name"
                android:textStyle="bold"
                android:padding="@dimen/padding_small"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_row_applicant_applied_date"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/leave_applied_on"
                android:padding="@dimen/padding_small"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_row_applicant_leaves_days_applied"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/no_of_days_applied"
                android:padding="@dimen/padding_small"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_row_status"
                android:text = "@string/leave_status"
                android:textColor="@color/colorPrimaryText"
                android:padding="@dimen/padding_small"/>
        </LinearLayout>

</android.support.v7.widget.CardView>