<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardMaxElevation="@dimen/card_view_max_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/no_of_days_applied"
                android:id="@+id/id_display_days_applied"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_display_applied_dates"
                android:padding="@dimen/padding"
                android:text="@string/applied_dates"
                />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/holo_blue_dark"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reason_for_leave"
                        android:inputType="textMultiLine"
                        android:lines="2"
                        android:id="@+id/id_display_reason"
                        android:textColorHint="@android:color/holo_blue_dark"
                        android:editable="false"
                        />
                </android.support.design.widget.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_display_status"
                    android:padding="@dimen/padding"
                    android:text="@string/status_of_leave"
                    />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>