<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ApplyLeaveFragment">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardMaxElevation="@dimen/card_view_max_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardUseCompatPadding="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_leave_type_spinner"
                android:autofillHints="Select Type of Leave"
                tools:targetApi="o" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/no_of_leaves_in_balance"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_balance_leaves"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/holo_blue_dark"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_of_days_leave_required"
                        android:id="@+id/id_leaves_days_required"
                        android:inputType="number"
                        android:maxLength="2"
                        />
                </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/select_dates"
                android:id="@+id/id_select_dates"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_applied_dates"
                android:padding="@dimen/padding"
                android:text="@string/applied_dates"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_apply_leave">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/holo_blue_dark"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/type_reason_for_leave"
                        android:inputType="textMultiLine"
                        android:maxLines="2"
                        android:id="@+id/id_reason"
                        android:textColorHint="@android:color/holo_blue_dark"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/margin_apply_leave"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_cancel_leave"
                    android:text="@string/cancel"
                    android:layout_marginStart="@dimen/margin_apply_leave"
                    android:layout_marginRight="@dimen/margin_apply_leave"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_apply_leave"
                    android:layout_marginEnd="@dimen/margin_apply_leave"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/id_apply_leave"
                    android:text="@string/apply"
                    android:layout_marginStart="@dimen/margin_apply_leave"
                    android:layout_marginRight="@dimen/margin_apply_leave"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_apply_leave"
                    android:layout_marginEnd="@dimen/margin_apply_leave"/>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>

</FrameLayout>