<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonalFragment">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardMaxElevation="@dimen/card_view_max_elevation"
        app:cardCornerRadius="@dimen/card_view_corner_radius"
        app:cardUseCompatPadding="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_apply_leave">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/holo_blue_dark"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:id="@+id/id_personal_name"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_apply_leave">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/holo_blue_dark"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/department"
                            android:id="@+id/id_personal_department"
                            android:textColorHint="@android:color/holo_blue_dark"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_apply_leave">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/holo_blue_dark"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/designation"
                            android:id="@+id/id_personal_designation"
                            android:textColorHint="@android:color/holo_blue_dark"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_apply_leave">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@android:color/holo_blue_dark"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/emailid"
                            android:editable="false"
                            android:id="@+id/id_personal_email"
                            android:textColorHint="@android:color/holo_blue_dark"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_apply_leave">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/gender"
                        android:padding="@dimen/padding"
                        android:layout_margin="@dimen/margin_apply_leave"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/padding">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:id="@+id/id_radio_male"
                            android:layout_margin="@dimen/margin_apply_leave"/>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_apply_leave"
                            android:text="@string/female"
                            android:id="@+id/id_radio_female"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_apply_leave"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_cancel"
                        android:text="@string/cancel"
                        android:layout_marginStart="@dimen/margin_apply_leave"
                        android:layout_marginRight="@dimen/margin_apply_leave"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_apply_leave"
                        android:layout_marginEnd="@dimen/margin_apply_leave"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/id_save"
                        android:text="@string/save"
                        android:layout_marginStart="@dimen/margin_apply_leave"
                        android:layout_marginRight="@dimen/margin_apply_leave"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_apply_leave"
                        android:layout_marginEnd="@dimen/margin_apply_leave"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</FrameLayout>